--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -685,5 +685,60 @@ button:hover {
   to {
     transform: translateX(-100%);
   }
+} 
+.logos {
+  overflow: hidden;
+  padding: 30px 0;
+  display: flex;
+  justify-content: center;
+  position: relative;
+  background-color: #f9f9f9; /* Optional background color */
 }
 
+.logos:before, .logos:after {
+  position: absolute;
+  top: 0;
+  content: '';
+  width: 250px;
+  height: 100%;
+  z-index: 2;
+}
+
+.logos:before {
+  left: 0;
+  background: linear-gradient(to left, rgba(255,255,255,0), rgba(255, 255, 255, 1));
+}
+
+.logos:after {
+  right: 0;
+  background: linear-gradient(to right, rgba(255,255,255,0), rgba(255, 255, 255, 1));
+}
+
+.logo_items {
+  display: flex;
+  overflow-x: auto;
+  animation: 35s slides infinite linear;
+  white-space: nowrap;
+  padding: 10px;
+}
+
+.logos:hover .logo_items {
+  animation-play-state: paused;
+}
+
+.logo_items img {
+  height: 100px;
+  margin: 0 10px;
+  transition: transform 0.3s ease-in-out;
+}
+
+.logo_items img:hover {
+  transform: scale(1.1);
+}
+
+@media (max-width: 768px) {
+  .logo_items img {
+    height: 80px;
+  }
+}
+        
